Fixed list view header alignment

--- a/src/stylesheets/components/ListCard.css
+++ b/src/stylesheets/components/ListCard.css
@@ -16,10 +16,15 @@
 }
 
 .list-card-data-container {
-  display: flex;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 10px;
   align-items: center;
-  justify-content: space-around;
-  margin: 0px 10px;
+  margin-left: 10px;
   width: 100%;
-  
+}
+
+.list-card-data-container div {
+  width: 100px;
+  text-align: center;
 }
