--- a/src/stylesheets/components/ListContainer.css
+++ b/src/stylesheets/components/ListContainer.css
@@ -1,9 +1,3 @@
-#list-header {
-  display: flex;
-  justify-content: space-around;
-  font-family: roboto;
-}
-
 #incomplete-card-header {
   margin: 10px;
   font-family: roboto;
@@ -12,4 +6,18 @@
 #complete-card-header {
   margin: 10px;
   font-family: roboto;
+}
+
+.list-header {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 10px;
+  margin-left: 65px;
+  margin-right: 15px;
+  font-family: roboto;
+}
+
+.list-header div {
+  width: 100px;
+  text-align: center;
 }
